Add detailed information to about page

--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -74,6 +74,11 @@ main {
 	}
 }
 
+img.screenshot {
+	width: 842px;
+	height: 412px;
+}
+
 .download {
 	background: linear-gradient(to top, rgb(242, 145, 25), rgb(242, 176, 96));
 	color: #FFF;
