--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -57,6 +57,7 @@ h2 {
 main {
 	background:rgba(255, 255, 255, 0.6);
 	border-radius: 25;
+	position: relative;
 
 	p {
 		padding-right: 40%;
@@ -71,6 +72,13 @@ main {
 			text-decoration: none;
 			border-bottom: 1px solid $link-hover-color;
 		}
+	}
+
+	img.github {
+		position: absolute;
+		top: 0;
+		right: 0;
+		border: 0;
 	}
 }
 
@@ -87,8 +95,13 @@ img.screenshot {
 	box-shadow: 1px 1px 1px rgba(000,000,000,0.3),inset 0px 0px 3px rgba(255,255,255,0.5);
 	box-shadow: 1px 1px 1px rgba(000,000,000,0.3),inset 0px 0px 3px rgba(255,255,255,0.5);
 	text-shadow: 0px 0px 3px rgba(0,0,0,0.5);
-	width: 100px;
-	padding: 10px 0;
+	padding: 10px;
+}
+
+.download-top {
+	font-size: 250%;
+	float: right;
+	border-radius: 8px;
 }
 
 .shellline { 
