--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -17,7 +17,7 @@ $font-size-h2: floor(($font-size-base * 1.7));
 body {
 	background: linear-gradient(to top, rgb(247, 205, 137), rgb(247, 233, 210));
 	background-attachment: fixed;
-	
+	letter-spacing: 1px;
 }
 
 nav {
