--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -9,7 +9,7 @@ $navbar-default-link-hover-color: $link-color;
 
 $font-size-h1: floor(($font-size-base * 2));
 $font-size-h2: floor(($font-size-base * 1.7));
-
+$font-size-h3: floor(($font-size-base * 1.5));
 
 
 @import "bootstrap/bootstrap.scss";
@@ -18,6 +18,7 @@ body {
 	background: linear-gradient(to top, rgb(247, 205, 137), rgb(247, 233, 210));
 	background-attachment: fixed;
 	letter-spacing: 1px;
+	line-height: 1.4em;
 }
 
 nav {
@@ -39,7 +40,8 @@ nav {
 }
 
 h1, h2, h3 {
-	padding: 7px;
+
+	line-height: 1.5em;
 }
 
 h1 {
