--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -7,6 +7,10 @@ $link-hover-color: lighten($text-color, 30%);
 $navbar-default-link-color: #FFFFFF;
 $navbar-default-link-hover-color: $link-color;
 
+$grid-gutter-width: 50px;
+$container-md: ((840px + $grid-gutter-width));
+$container-lg: $container-md;
+
 $font-size-h1: floor(($font-size-base * 2));
 $font-size-h2: floor(($font-size-base * 1.7));
 $font-size-h3: floor(($font-size-base * 1.5));
@@ -61,10 +65,6 @@ main {
 	background:rgba(255, 255, 255, 0.6);
 	border-radius: 25;
 	position: relative;
-
-	p {
-		padding-right: 40%;
-	}
 
 	a {
 		&:link {
