--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -109,6 +109,11 @@ img.screenshot {
 a.download {
 	background: linear-gradient(to top, rgb(242, 145, 25), rgb(242, 176, 96));
 
+	// Remove border which is attached to default a elements
+	&:link {
+			border-bottom: 0;
+	}
+
 	border: 1px solid rgb(247, 153, 0);
 
 	box-shadow: 1px 1px 1px rgba(000,000,000,0.3),inset 0px 0px 3px rgba(255,255,255,0.5);
