Brighten on a:hover in navbar

--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -5,7 +5,7 @@ $link-color: darken($text-color, 10%);
 $link-hover-color: lighten($text-color, 30%);
 
 $navbar-default-link-color: #FFFFFF;
-$navbar-default-link-hover-color: $link-color;
+$navbar-default-link-hover-color: $navbar-default-link-color;
 
 $grid-gutter-width: 50px;
 $container-md: ((840px + $grid-gutter-width));
@@ -30,6 +30,10 @@ body {
 nav {
 	background: linear-gradient(to top, rgb(242, 145, 25), rgb(242, 176, 96));
 	box-shadow: 5px 5px 5px #C0C0C0;
+
+	a:hover {
+		background: linear-gradient(to top, lighten(rgb(242, 145, 25), 5%), lighten(rgb(242, 176, 96), 5%));
+	}
 
 	img {
     	max-height: 40px;
