--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -127,8 +127,8 @@ a.download {
 	text-shadow: 0px 0px 3px rgba(0,0,0,0.5);
 
 	&:hover {
-		color: #FCE8CD;
 		text-decoration: none;
+		background: linear-gradient(to top, lighten(rgb(242, 145, 25), 5%), lighten(rgb(242, 176, 96), 5%));
 	}
 }
 
