Remove border-bottom from tab in update info page

--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -78,6 +78,15 @@ main {
 		}
 	}
 
+
+	ul#yearTabs {
+		li {
+			a {
+				border-bottom: none;
+			}
+		}
+	}
+
 	img {
 		max-width: 100%;
 		height: auto;
