Add font style and fix padding to image captions

--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -164,8 +164,12 @@ div.img {
 
 	// Caption
 	p {
+		font-size: $font-size-small;
+		color: rgba($text-color, 0.6);
+
 		text-align: center;
 		padding: 0;
+		padding-top: 4px;
 		margin: 0;
 	}
 }
