Fix "GitHub" notation
The official "GitHub" notation is "GitHub" not "Github". See title tag
in https://github.com/.

--- a/contents/assets/stylesheets/styles.scss
+++ b/contents/assets/stylesheets/styles.scss
@@ -94,7 +94,7 @@ main {
 		height: auto;
 	}
 
-	// For Github ribbon
+	// For GitHub ribbon
 	img.github {
 		float: right;
 		margin-top: -$main-padding;
